--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<ul class="tool">
 			<li id="pencil"><i class="iconfont icon-qianbi1"></i></li>
 			<li id="eraser"><i class="iconfont icon-xiangpica"></i></li>
-			<li id="word"><i class="iconfont icon-jiandao"></i></li>
-			<li id="clipBtn"><i class="iconfont icon-wenzi"></i></li>
+			<li id="word"><i class="iconfont icon-wenzi"></i></li>
+			<li id="clipBtn"><i class="iconfont icon-jiandao"></i></li>
 		</ul>
 		<ul class="shape">
 			<li id="line"><i class="iconfont icon-line"></i></li>
